[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage"
version = "0.2.1"
description = "Parse local Claude Code logs, show token spend per session/project/model/day."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frank Hetland" }]
keywords = ["claude", "anthropic", "llm", "usage", "tokens", "cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
claude-usage = "claude_usage.cli:main"

[project.urls]
Homepage = "https://github.com/frahet/claude-usage"
Issues = "https://github.com/frahet/claude-usage/issues"

[tool.setuptools.packages.find]
where = ["src"]
