[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-watch"
version = "0.4.0"
description = "Live dashboard + kill switch for Claude Code spend — parses local jsonl logs, shows per-session cost in real time."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frank Hetland" }]
keywords = ["claude", "anthropic", "llm", "usage", "tokens", "cost", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
claude-watch = "claude_watch.cli:main"

[project.urls]
Homepage = "https://github.com/frahet/claude-watch"
Issues = "https://github.com/frahet/claude-watch/issues"

[tool.setuptools.packages.find]
where = ["src"]
